--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="JS/script.js"></script>
-    <script src="JS/script2.js"></script>
+    <script src="JS/animation.js"></script>
     </head>
     <body>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-12">
+                <div class="titleModals">
                 <div id="myModalCase" class="modal fade" role="dialog">
-                  <div class="modal-dialog">
+                  <div class="modal-dialog modal-lg">
 
                     <!-- Modal content-->
                     <div class="modal-content">
@@ -44,23 +45,23 @@
                       </div>
                       <div class="modal-body">
                         <p><strong><u>About them:</u></strong></p>
-                        <p>- Upgrades will help get more € per seconds et clicks.</p>
-                        <p>- The limit for each upgrades is 15.</p>
+                        <p>- Upgrades will help get more <span style="font-weight: bold;">€</span> per seconds et clicks.</p>
+                        <p>- The limit for each upgrades is <span style="color: red;">15</span>.</p>
                         <p><strong><u>All Upgrades:</u></strong></p>
-                        <p><u>Pistols:</u></p>
-                        <p>- Glock (+1/s and +1/click)</p>
-                        <p>- Usp-S (+2/s and +2/click)</p>
-                        <p>- P250 (+3/s and +3/click)</p>
-                        <p>- Desert-Eagle (+4/s and +4/click)</p>
-                        <p>- Tec-9 (+5/s and +5/click)</p>
-                        <p>- Five-Seven (+6/s and +6/click)</p>
+                        <p class="modalLeft"><u>Pistols:</u></p>
+                        <p class="modalLeft">- Glock (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+1</span>/click)</p>
+                        <p class="modalLeft">- Usp-S (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+2</span>/click)</p>
+                        <p class="modalLeft">- P250 (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+3</span>/click)</p>
+                        <p class="modalLeft">- Desert-Eagle (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+4</span>/click)</p>
+                        <p class="modalLeft">- Tec-9 (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+5</span>/click)</p>
+                        <p class="modalLeft">- Five-Seven (<span style="color: #32CD32;">+1</span>/s and <span style="color: #32CD32;">+6</span>/click)</p>
                         <p><u>Assaults:</u><p>
-                        <p>- Famas (+12/s and +12/click)</p>
-                        <p>- Galil (+14/s and +14/click)</p>
-                        <p>- M4A1-S (+16/s and +16/click)</p>
-                        <p>- Scout (+18/s and +18/click)</p>
-                        <p>- Ak-47 (+20/s and +20/click)</p>
-                        <p>- AWP (+22/s and +22/click)</p>
+                        <p>- Famas (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+12</span>/click)</p>
+                        <p>- Galil (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+14</span>/click)</p>
+                        <p>- M4A1-S (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+16</span>/click)</p>
+                        <p>- Scout (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+18</span>/click)</p>
+                        <p>- Ak-47 (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+20</span>/click)</p>
+                        <p>- AWP (<span style="color: #32CD32;">+3</span>/s and <span style="color: #32CD32;">+22</span>/click)</p>
                      </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -69,13 +70,13 @@
 
                   </div>
                 </div>
-                <div id="myModalOptions" class="modal fade" role="dialog">
-                  <div class="modal-dialog">
+                <div id="myModalAchievements" class="modal fade" role="dialog">
+                  <div class="modal-dialog modal-lg">
 
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">About Options</h4>
+                        <h4 class="modal-title">About Achievements</h4>
                       </div>
                       <div class="modal-body">
                         <p>Some text in the modal.</p>
@@ -87,6 +88,26 @@
 
                   </div>
                 </div>
+            </div>
+            <div id="myModalAchivementsPop1" class="modal fade" role="dialog">
+              <div class="modal-dialog modal-sm">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal"><span style="color: red;">x</span></button>
+                    <h4 class="modal-title">About Options</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>Some text in the modal.</p>
+                  </div>
+                  <div class="modal-footer">
+                    <p style="font-size: 14px;">"Petite Phrase sympas"<p>
+                  </div>
+                </div>
+
+              </div>
+            </div>
         <div class="container noSelect .iCenter">
             <div class="row">
 
@@ -199,19 +220,27 @@
                 </div>
             </div>
 
-                <div id="optionSpot" class=" col-md-12 col-lg-4">
+                <div id="achievementSpot" class=" col-md-12 col-lg-4">
 
-                    <h1><span class="glyphicon glyphicon-cog"></span> Options <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalOptions"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
-
-                    <div class="groupBtn">
-                        <button type="button" class="saveBtn btn btn-success" disabled>Save</button>
-                        <button type="button" class="loadBtn btn btn-primary" disabled>Load</button>
-                        <button type="button" class="resetBtn btn btn-warning" disabled>Reset</button>
-                        <button type="button" class="deleteBtn btn btn-danger" disabled>Delete</button>
+                    <h1><span class="glyphicon glyphicon-cog"></span> Achievements <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalAchievements"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+                        <h4 class="yourTotal">Total of <span style="font-weight: bold;">€</span> Collected</h4>
+                            <input class="euroTotal" type="text" disabled value="0">
+                        <div class="divider"></div>
+                            <h4 class="yourLevel">Level 1</h4>
+                        <div class="progress">
+                            <div class="progress-bar progressBar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                <span class="progressBarText" style="color: #1E90FF;">0/500 Exp</span>
+                            </div>
+                        </div>
+                        <div class="divider"></div>
+                        <h4 class="yourAchievements">Your achievements</h4>
+                            <div class="iconAchievNo noBash bash-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
+                            <div class="iconAchiev bash bash-tooltip"><a data-toggle="tooltip" title="Your gained 1000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
+                            <div class="iconAchiev purple"></div>
+                            <div class="iconAchiev wine"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
         <footer class="text-center">
             <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -225,7 +254,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">...</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#">...</a></li>
                             <li><a href="#">...</a></li>
                             <li><a href="#">...</a></li>
