--- a/index.html
+++ b/index.html
@@ -115,21 +115,20 @@
 
                     <h1>CS:GO Farm <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalCase"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
                         <div class="caseNumberSpot">
+                            <h4 class="yourBalance">Your balance</h4>
                             <input class="caseNumber" type="text" disabled value="0">
-                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span>
                         </div>
-
                         <div class="casePerSecSpot">
+                            <h4 class="yourBalanceSec">Euros per second</h4>
                             <input class="casePerSec" type="text" disabled value="0">
-                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/s</span>
                         </div>
-
                         <div class="casePerClickSpot">
+                            <h4 class="yourBalanceClick">Euros per click</h4>
                             <input class="casePerClick" type="text" disabled value="1">
-                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/click</span>
                         </div>
 
-                    <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png" draggable="false">
+                    <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo3.png" draggable="false">
+                    <!-- <img class="glowingCircle" src="CSS/IMGS/caseCsgo3.png" draggable="false"> -->
                 </div>
 
                 <div id="upgradeSpot" class="col-md-6 col-lg-4">
@@ -216,15 +215,17 @@
                             <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="2327"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                             <button class="btn btn-danger sell sellAwp">Sell</button>
                         </div>
-
+                    </div>
                 </div>
-            </div>
 
                 <div id="achievementSpot" class=" col-md-12 col-lg-4">
 
                     <h1><span class="glyphicon glyphicon-cog"></span> Achievements <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalAchievements"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
                         <h4 class="yourTotal">Total of <span style="font-weight: bold;">€</span> Collected</h4>
                             <input class="euroTotal" type="text" disabled value="0">
+                        <div class="divider"></div>
+                            <h4 class="yourClicks">Total of clicks</h4>
+                                <input class="clickTotal" type="text" disabled value="0">
                         <div class="divider"></div>
                             <h4 class="yourLevel">Level 1</h4>
                         <div class="progress">
@@ -235,11 +236,27 @@
                         <div class="divider"></div>
                         <h4 class="yourAchievements">Your achievements</h4>
                             <div class="iconAchievNo noBash mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
-                            <div class="iconAchiev bash mod-tooltip"><a data-toggle="tooltip" title="Your gained 1 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
+                            <div class="iconAchiev bash mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
                             <div class="iconAchievNo noBish mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
-                            <div class="iconAchiev bish mod-tooltip"><a data-toggle="tooltip" title="Your gained 10 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
+                            <div class="iconAchiev bish mod-tooltip"><a data-toggle="tooltip" title="Gained 10 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
                             <div class="iconAchievNo noBosh mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
-                            <div class="iconAchiev bosh mod-tooltip"><a data-toggle="tooltip" title="Your gained 100 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
+                            <div class="iconAchiev bosh mod-tooltip"><a data-toggle="tooltip" title="Gained 100 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
+                            <div class="iconAchievNo noDrug mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico"></a></div>
+                            <div class="iconAchiev drug mod-tooltip"><a data-toggle="tooltip" title="Gained 250 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico"></a></div>
+                            <div class="iconAchievNo noRekt mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico"></a></div>
+                            <div class="iconAchiev rekt mod-tooltip"><a data-toggle="tooltip" title="Gained 500 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico"></a></div>
+                            <div class="iconAchievNo noSkull mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico"></a></div>
+                            <div class="iconAchiev skull mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico"></a></div>
+                            <div class="iconAchievNo noCsgo mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico"></a></div>
+                            <div class="iconAchiev csgo mod-tooltip"><a data-toggle="tooltip" title="500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico"></a></div>
+                            <div class="iconAchievNo noCsgoBlue mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico"></a></div>
+                            <div class="iconAchiev csgoBlue mod-tooltip"><a data-toggle="tooltip" title="1000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico"></a></div>
+                            <div class="iconAchievNo noCsgoGreen mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico"></a></div>
+                            <div class="iconAchiev csgoGreen mod-tooltip"><a data-toggle="tooltip" title="2500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico"></a></div>
+                            <div class="iconAchievNo noCsgoRed mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico"></a></div>
+                            <div class="iconAchiev csgoRed mod-tooltip"><a data-toggle="tooltip" title="5000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico"></a></div>
+                            <div class="iconAchievNo noFlick mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico"></a></div>
+                            <div class="iconAchiev flick mod-tooltip"><a data-toggle="tooltip" title="10 000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico"></a></div>
                         </div>
                     </div>
                 </div>
